<ui version="4.0" >
 <class>ConfirmDialog</class>
 <widget class="QDialog" name="ConfirmDialog" >
  <property name="geometry" >
   <rect>
    <x>0</x>
    <y>0</y>
    <width>337</width>
    <height>186</height>
   </rect>
  </property>
  <property name="sizePolicy" >
   <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="windowTitle" >
   <string>Dialog</string>
  </property>
  <layout class="QVBoxLayout" >
   <item>
    <widget class="QLabel" name="titleLabel" >
     <property name="font" >
      <font>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="text" >
      <string comment="KDE::DoNotExtract">TextLabel</string>
     </property>
     <property name="wordWrap" >
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" >
     <item>
      <layout class="QVBoxLayout" >
       <item>
        <layout class="QHBoxLayout" >
         <item>
          <widget class="QLabel" name="label_2" >
           <property name="font" >
            <font>
             <weight>75</weight>
             <bold>true</bold>
            </font>
           </property>
           <property name="text" >
            <string>Name: </string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QLabel" name="nameLabel" >
           <property name="text" >
            <string comment="KDE::DoNotExtract">TextLabel</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
        <layout class="QHBoxLayout" >
         <item>
          <widget class="QLabel" name="label_3" >
           <property name="font" >
            <font>
             <weight>75</weight>
             <bold>true</bold>
            </font>
           </property>
           <property name="text" >
            <string>Address: </string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QLabel" name="addressLabel" >
           <property name="text" >
            <string comment="KDE::DoNotExtract">TextLabel</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
         <item>
          <widget class="QLabel" name="confirmLabel" >
           <property name="font" >
            <font>
             <weight>75</weight>
             <bold>true</bold>
            </font>
           </property>
           <property name="text" >
            <string comment="KDE::DoNotExtract">TextLabel</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QLabel" name="valueLabel" >
           <property name="text" >
            <string comment="KDE::DoNotExtract">TextLabel</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
     <item>
      <widget class="QLabel" name="iconLabel" >
       <property name="text" >
        <string comment="KDE::DoNotExtract">TextLabel</string>
       </property>
       <property name="alignment" >
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" >
     <item>
      <widget class="QPushButton" name="yesButton" >
       <property name="text" >
        <string>Yes</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="noButton" >
       <property name="text" >
        <string>No</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
